Fix/bxms 107 Adds white background with 10px padding above behind logo on brand pages (#152)
* Added white background with 10px padding above behind logo on brand pages

- Note: 1084px breakpoint prevents white background behind logo shrinking due to 30px side padding either side of 1024px max width

* Removed Foundation gutter grid to fix white bg. Removed custom breakpoint. Renamed to BEM syntax.

--- a/src/styles/components/brand/_brand.scss
+++ b/src/styles/components/brand/_brand.scss
@@ -1,3 +1,8 @@
+.brand__wrapper {
+    max-width: 1024px;
+    margin: 0px auto;
+}
+
 .brand__logo {
     position: relative;
     z-index: $z-index-1;
@@ -8,10 +13,16 @@
         max-height: 100px;
         width: 60%;
     }
+
     @media #{$medium-up} {
-        margin: 0 0 40px;
+        margin: 0px 0 40px;
+        background-color: $color-white;
     }
 
+    @media #{$large-up} {
+        padding-top: 10px;
+        margin: 0px 0 30px;
+    }
 }
 
 .brand__body {
